--- a/css/article css/article-1.css
+++ b/css/article css/article-1.css
@@ -38,3 +38,13 @@ li {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.image {
+  text-align: center;
+  margin: 20px 0;
+}
+.image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
