--- a/css/article css/article-1.css
+++ b/css/article css/article-1.css
@@ -47,4 +47,28 @@ li {
   height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+.image img:hover {
+  transform: scale(1.05);
+}
+.trailer {
+  text-align: center;
+  margin: 20px 0;
+}
+.trailer iframe {
+  width: 100%;
+  height: 450px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #303030;
+  color: #fff;
+  border-radius: 8px;
+  margin-top: 20px;
+  font-size: 1em;
 }
