--- a/css/main-download.css
+++ b/css/main-download.css
@@ -43,6 +43,11 @@ nav a:hover {
   margin-left: 5px;
   border-radius: 5px;
 }
+.search-bar button:hover {
+  background: #0051ff;
+  transition: transform 0.3s ease;
+  transform: scale(1.05);
+}
 .game-list {
   display: flex;
   justify-content: center;
@@ -81,7 +86,6 @@ nav a:hover {
   border-radius: 5px;
   cursor: pointer;
 }
-
 .download-section button:hover {
   background: #0051ff;
   transition: transform 0.3s ease;
