--- a/css/article css/gta-6.css
+++ b/css/article css/gta-6.css
@@ -72,3 +72,30 @@ footer {
   margin-top: 20px;
   font-size: 1em;
 }
+
+nav {
+  background-color: #303030;
+  padding: 10px 0;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+nav ul li {
+  margin: 0 15px;
+}
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+nav ul li a:hover {
+  color: #f6ff00;
+}
