--- a/css/home-page.css
+++ b/css/home-page.css
@@ -11,7 +11,7 @@ body {
 }
 
 .navbar {
-  background-color: #f0f0f0;
+  background-color: #262626;
   padding: 1rem 5%;
   display: flex;
   justify-content: space-between;
@@ -20,7 +20,7 @@ body {
 
 .logo {
   font-size: 2rem;
-  color: #00aa00;
+  color: #fbff00;
   font-weight: bold;
 }
 
@@ -30,13 +30,13 @@ body {
 }
 
 .nav-links a {
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   font-size: 1.1rem;
 }
 
 .nav-links a:hover {
-  color: #00aa00;
+  color: #ffff00;
 }
 
 .hero {
@@ -110,6 +110,8 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .game-card:hover {
