--- a/css/home-page.css
+++ b/css/home-page.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: #e9e9e9;
   color: black;
 }
 
@@ -105,7 +105,7 @@ body {
 }
 
 .game-card {
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
