--- a/css/main-blog.css
+++ b/css/main-blog.css
@@ -7,7 +7,7 @@
 body {
   font-family: "Arial", sans-serif;
   line-height: 1.6;
-  background-color: #f9f9f9;
+  background-color: #e9e9e9;
   color: #333;
 }
 
