--- a/css/main-blog.css
+++ b/css/main-blog.css
@@ -80,6 +80,12 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.article-container:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  transform: scale(1.01);
+}
+
 .article-header {
   text-align: center;
   margin-bottom: 20px;
