--- a/css/youtube.css
+++ b/css/youtube.css
@@ -144,3 +144,67 @@ footer {
   transition: transform 0.3s ease;
   transform: scale(1.05);
 }
+
+.burger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 21px;
+}
+
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  transition: all 0.3s ease;
+}
+
+@media (max-width: 425px) {
+  .nav-links {
+    position: absolute;
+    right: 0;
+    height: 35vh;
+    top: 0;
+    background-color: #262626;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links.nav-active {
+    transform: translateX(0);
+    padding-top: 10px;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .burger.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .burger.toggle .line2 {
+    opacity: 0;
+  }
+
+  .burger.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+}
+
+@media (max-width: 768px) {
+  .video-card {
+    flex: 1 1 calc(50% - 1rem);
+  }
+}
+
+@media (max-width: 480px) {
+  .video-card {
+    flex: 1 1 100%;
+  }
+}
