--- a/css/article css/far-cry-6.css
+++ b/css/article css/far-cry-6.css
@@ -135,6 +135,11 @@ footer {
   text-decoration: none;
 }
 
+a.nav-bar-logo {
+  color: #fbff00;
+  text-decoration: none;
+}
+
 .download-button button {
   background-color: red;
   color: white;
