--- a/css/main-download.css
+++ b/css/main-download.css
@@ -150,7 +150,7 @@ footer {
 .burger div {
   width: 25px;
   height: 3px;
-  background-color: #333;
+  background-color: #ffffff;
   margin: 5px;
 }
 
@@ -166,7 +166,7 @@ footer {
     position: absolute;
     top: 60px;
     left: 0;
-    background-color: #fff;
+    background-color: #262626;
     padding: 10px;
   }
   .nav-links.active {
