--- a/css/article css/far-cry-6.css
+++ b/css/article css/far-cry-6.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   margin: 0;
-  padding: 20px;
+  padding: 0;
   background-color: #f4f4f4;
   color: #333;
 }
@@ -92,6 +92,7 @@ li {
 .nav-links {
   display: flex;
   gap: 2rem;
+  transition: transform 0.5s ease-in;
 }
 
 .nav-links a {
@@ -102,6 +103,54 @@ li {
 
 .nav-links a:hover {
   color: #ffff00;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    right: 0;
+    height: 50vh;
+    top: 0;
+    background-color: #262626;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    transform: translateX(100%);
+  }
+
+  .nav-links.nav-active {
+    transform: translateX(0%);
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .burger.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .burger.toggle .line2 {
+    opacity: 0;
+  }
+
+  .burger.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
 }
 
 footer {
