--- a/css/home-page.css
+++ b/css/home-page.css
@@ -53,8 +53,8 @@ a.nav-bar-logo {
 }
 
 .video {
-  width: 100%;
-  height: auto;
+  width: 100vw;
+  height: 100vh;
   display: block;
   object-fit: cover;
 }
