--- a/css/home-page.css
+++ b/css/home-page.css
@@ -5,9 +5,15 @@
   font-family: "Arial", sans-serif;
 }
 
+html,
 body {
   background-color: #e9e9e9;
   color: black;
+  width: 100%;
+  overflow-x: hidden;
+}
+header {
+  width: 100%;
 }
 
 .navbar {
@@ -17,6 +23,7 @@ body {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  width: 100%;
 }
 
 .logo {
@@ -53,7 +60,7 @@ a.nav-bar-logo {
 }
 
 .video {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: block;
   object-fit: cover;
